<resources>
    <string name="app_name">আলোকবর্তিকা</string>
    <string name="welcomeText">আলোকবর্তিকা অ্যাপ এ আপনাকে স্বাগতম</string>
    <string name="registerNewAccount">নতুন নিবন্ধন করতে এখানে ক্লিক করুন</string>
    <string name="or">অথবা</string>
    <string name="loginToPreviousAccount">পূর্বে নিবন্ধন করে থাকলে এখানে ক্লিক করুন</string>
    <string name="forUsingThisApp">অ্যাপটি ব্যবহার করে সাহায্য পেতে অনুগ্রহ করে আপনার পরিবার নিবন্ধন করুন</string>
    <string name="title_activity_register">নতুন নিবন্ধন</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="yourInfo">নিম্নে আপনার পরিচয় প্রদান করুন</string>
    <string name="fullName">আপনার নাম</string>
    <string name="name">নাম</string>
    <string name="mobileNumber">মোবাইল নাম্বার</string>
    <string name="voterId">ভোটার আইডি নাম্বার</string>
    <string name="address">ঠিকানা</string>
    <string name="addMember">নতুন সদস্য যোগ করুন</string>
    <string name="newMemberInfo">নতুন সদস্যের তথ্য</string>
    <string name="relation">সম্পর্ক</string>
    <string name="cancel">বাতিল</string>
    <string name="add">যোগ করুন</string>
    <string name="nameQuote">নাম :</string>
    <string name="voterIdQuote">ভোটার আইডি :</string>
    <string name="relationQuote">সম্পর্ক :</string>
    <string name="done">নিবন্ধন সম্পন্ন করুন</string>
    <string name="proceed">সম্পন্ন করুন</string>
    <string name="codeSentText">আপনার মোবাইলে ৬ ডিজিট সম্পন্ন কোড পাঠানো হয়েছে । অনুগ্রহ করে কোডটি প্রদান করুন</string>
    <string name="insertMobileNumber">অনুগ্রহ করে আপনার ১১ ডিজিটের মোবাইল নাম্বারটি প্রদান করুন</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="noRequestYet">আপনার পূর্ববর্তী কোন সাহায্যের অনুরোধ নেই</string>
    <string name="clickForRelief">সাহায্য পেতে ক্লিক করুন</string>
    <string name="generalInfo">ডেলিভারি সঙ্ক্রান্ত তথ্য</string>
    <string name="deliveryDate">ডেলিভারির তারিখ</string>
    <string name="dummyDate">22 / 04 / 2020</string>
    <string name="requestDate">আবেদনের তারিখ</string>
    <string name="dummyDate2">19 / 04 / 2020</string>
    <string name="deliveryStatus">ডেলিভারি স্ট্যাটাস</string>
    <string name="arrivedToCenter">সাহায্যকেন্দ্রে পৌঁছিয়েছে</string>
    <string name="products">পণ্য</string>
    <string name="rice">চাল</string>
    <string name="dummyKg3">3 কেজি</string>
    <string name="dal">ডাল</string>
    <string name="dummyKg1">1 কেজি</string>
    <string name="alu">আলু</string>
    <string name="tel">তেল</string>
    <string name="dummy2Liter">2 লিটার</string>
    <string name="showQrCode">QR কোড দেখুন</string>
    <string name="showToVolunteer">কোডটি নিকটস্থ সহযোগীকে দেখান</string>
    <string name="typeOfReport">অভিযোগ এর ধরন :</string>
    <string name="details">বিস্তারিত বর্ণনা</string>
    <string name="sendReport">প্রেরণ করুন</string>
    <string name="iedcr">IEDCR হটলাইন</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="welcome">Welcome</string>
    <string name="johnDoe">John Doe</string>
    <string name="mrTestUser">MR Test User XYZ</string>
    <string name="request">সাহায্য</string>
    <string name="report">অভিযোগ</string>
    <string name="emergeny">ইমারজেন্সি নাম্বারসমুহ</string>
    <string name="familyMemberInfo">পরিবারের অন্য সদস্যদের পরিচয় প্রদান করুন</string>
    <string name="reportSuccessfullySubmitted">আপনার অভিযোগটি সফলভাবে প্রেরণ করা হয়েছে</string>
    <string name="activity_qr_code">QR কোড</string>
    <string name="firebase_sms_string">is your verification code</string>
    <string name="invalidOtp">আপনি ভুল কোড প্রবেশ করেছেন</string>
    <string name="pleaseWait">অনুগ্রহ করে অপেক্ষা করুন</string>
    <string name="verifyingOtp">কোডটি যাচাই হচ্ছে</string>
</resources>
