<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_32"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generalInfo"
            android:textColor="?colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/standard_8"
            android:background="@color/transparentBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/standard_18"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/deliveryDate"
                />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:gravity="center"
                android:textColor="#000000"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummyDate"
                android:gravity="right"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/standard_8"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/requestDate"
                />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:gravity="center"
                android:textColor="#000000"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummyDate2"
                android:gravity="right"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/standard_8"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/deliveryStatus"
                />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:gravity="center"
                android:textColor="#000000"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/green"
                android:text="@string/arrivedToCenter"
                android:gravity="right"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/products"
            android:layout_marginTop="@dimen/standard_32"
            android:textColor="?colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/standard_8"
            android:background="@color/transparentBlack" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/standard_8"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/rice"
                />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:gravity="center"
                android:textColor="#000000"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummyKg3"
                android:gravity="right"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/standard_8"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/dal"
                />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:gravity="center"
                android:textColor="#000000"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummyKg1"
                android:gravity="right"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/standard_8"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/alu"
                />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:gravity="center"
                android:textColor="#000000"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummyKg1"
                android:gravity="right"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/standard_8"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/tel"
                />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:gravity="center"
                android:textColor="#000000"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy2Liter"
                android:gravity="right"
                />
        </LinearLayout>


        <Button
            android:id="@+id/btnGetQrCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brownLight"
            android:paddingStart="@dimen/standard_8"
            android:paddingEnd="@dimen/standard_8"
            android:text="@string/showQrCode"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/standard_18"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/tvEmptyRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noRequestYet"
        android:textColor="#000000"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btnMakeRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brownLight"
        android:paddingStart="@dimen/standard_8"
        android:paddingEnd="@dimen/standard_8"
        android:text="@string/clickForRelief"
        android:textColor="@color/white"
        android:layout_gravity="bottom"
        />

</FrameLayout>