<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_32"
    android:orientation="vertical"
    tools:context=".LoginOrRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="@dimen/standard_64"
            android:layout_height="@dimen/standard_64"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/xxLargeText"
            android:text="@string/app_name"
            android:fontFamily="@font/muktinarrow"
            android:textStyle="bold"
            android:textColor="@color/brown"
            android:layout_marginStart="@dimen/standard_18" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:gravity="center"
        android:layout_marginTop="@dimen/standard_32"
        android:textSize="@dimen/LargeText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forUsingThisApp"
        android:gravity="center"
        android:layout_marginTop="@dimen/standard_32"
        android:textSize="@dimen/LargeText"
        android:textColor="#000000"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerNewAccount"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:onClick="onRegistrationClicked"
        android:layout_marginTop="@dimen/standard_18"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/standard_18"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginToPreviousAccount"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/standard_18"
        android:background="@color/green"
        android:onClick="onLoginClicked"
        />



</LinearLayout>