<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_request">

    <fragment
        android:id="@+id/nav_request"
        android:name="com.callfornation.savetheirsouls.dashboard.RequestFragment"
        android:label="@string/request"
        tools:layout="@layout/fragment_request">
    </fragment>

    <fragment
        android:id="@+id/nav_report"
        android:name="com.callfornation.savetheirsouls.dashboard.ReportFragment"
        android:label="@string/report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_emergency"
        android:name="com.callfornation.savetheirsouls.dashboard.EmergencySupportFragment"
        android:label="@string/emergeny"
        tools:layout="@layout/fragment_emergency_support" />
</navigation>