<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/standard_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourInfo"
                android:textColor="?colorAccent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/standard_8"
                android:background="@color/transparentBlack" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_18"
                android:hint="@string/fullName"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/brownLight" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_18"
                android:hint="@string/voterId"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/brownLight" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_18"
                android:hint="@string/address"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/brownLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_24"
                android:text="@string/familyMemberInfo"
                android:textColor="?colorAccent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/standard_8"
                android:background="@color/transparentBlack" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFamily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_18" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_18"
                android:background="@color/blue"
                android:paddingStart="@dimen/standard_8"
                android:paddingEnd="@dimen/standard_8"
                android:text="@string/addMember"
                android:onClick="addFamilyMemberClicked"
                android:drawableLeft="@drawable/ic_add_24dp"
                android:textColor="@color/white" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_32"
                android:background="@color/brownLight"
                android:paddingStart="@dimen/standard_8"
                android:paddingEnd="@dimen/standard_8"
                android:text="@string/done"
                android:onClick="doneClicked"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
