<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/standard_32">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/typeOfReport"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_border"
        android:layout_marginTop="@dimen/standard_16"
        >
        <Spinner
            android:id="@+id/spComplain"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_32"/>

    </FrameLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_18"
        android:hint="@string/details"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/brownLight" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_32"
        android:background="@color/brownLight"
        android:paddingStart="@dimen/standard_8"
        android:paddingEnd="@dimen/standard_8"
        android:text="@string/sendReport"
        android:textColor="@color/white" />

</LinearLayout>