<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>
        <variable
            name="familyMember"
            type="com.callfornation.savetheirsouls.register.data.FamilyMember" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="8dp"
            android:layout_margin="@dimen/standard_12"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/standard_8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="@dimen/standard_94"
                        android:layout_height="wrap_content"
                        android:text="@string/nameQuote"
                        android:textColor="#000000"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{familyMember.name}"
                        android:gravity="end"
                        android:layout_marginStart="@dimen/standard_8"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/standard_16"
                    >
                    <TextView
                        android:layout_width="@dimen/standard_94"
                        android:layout_height="wrap_content"
                        android:text="@string/voterIdQuote"
                        android:textColor="#000000"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{familyMember.voterId}"
                        android:layout_marginStart="@dimen/standard_8"
                        android:gravity="end"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/standard_16"
                    >
                    <TextView
                        android:layout_width="@dimen/standard_94"
                        android:layout_height="wrap_content"
                        android:text="@string/relation"
                        android:textColor="#000000"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{familyMember.relation}"
                        android:layout_marginStart="@dimen/standard_8"
                        android:gravity="end"
                        />


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>